======================
    ADDED: compare directories (mark menu)
    ADDED: shift+left/right changes tabs (thanks to Dmitry Suzdalev)
    ADDED: linking mimes and protocols
    ADDED: new delete dialog box: lists the file names to be deleted (thanks to dirk for the idea)
    ADDED: iso protocol for viewing .iso cd/dvd images
           (thanks to Szombathelyi Gyorgy)
    ADDED: full handling of arj and lha packers
    ADDED: useraction: new Placeholder %_Sync("synchronizer-profile")%
    ADDED: synchronizer: profile handling
    ADDED: synchronizer: swap sides
    ADDED: useraction: new Placeholder %_Copy("from", "to")%
    ADDED: 3rd hand: new panel that does quick selection
    ADDED: 3rd hand: look n feel changed to fit krusader
    ADDED: credit for jonas in the about box
    ADDED: panels now save the tabs at shutdown (thanks to Donat Martin)
    ADDED: dropping URL-s onto the status / totals line
    ADDED: Bosnian translation
    ADDED: synchronizer: excluding files with '|' in the file filter
           (ex. '*.cpp *.h | *.moc.cpp' )
    ADDED: tooltips for squeezed tabs
    ADDED: sync-browse mode (if on, a directory-change in the active is also
           performed in the inactive panel)
    ADDED: beta-state incremental refresh. test it with fam enabled!
    ADDED: synchronizer: ability to give more files in the file filter
           (ex. '*.cpp *.h')
    ADDED: Two single click rename (Total Commander rename)
    ADDED: The 3rd hand of krusader. click the litle arrow below the panel's
           scrollbar to see..
    ADDED: showing suid, sgid and sticky bits in the permissions column
    ADDED: New useraction-system (partly based on Shies usermenu-prototype)
    
    REACTIVATED: usermenu (now using the new useraction-system)

    FIXED: totals bar didn't update when an incremental refresh happened
    FIXED: locate doesn't report the errors occured during the search
    FIXED: the viewer size is forgotten in maximized mode (KDE hack)